--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -164,7 +164,6 @@ ENDIF()
 
 ADD_SUBDIRECTORY(bvh)
 ADD_SUBDIRECTORY(x)
-ADD_SUBDIRECTORY(ply)
 ADD_SUBDIRECTORY(dxf)
 ADD_SUBDIRECTORY(OpenFlight)
 # ADD_SUBDIRECTORY(flt)
@@ -186,12 +185,16 @@ ADD_SUBDIRECTORY(md2)
 ADD_SUBDIRECTORY(osgtgz)
 ADD_SUBDIRECTORY(tgz)
 
-ADD_SUBDIRECTORY(txp)
 ADD_SUBDIRECTORY(shp)
 ADD_SUBDIRECTORY(txf)
 
 ADD_SUBDIRECTORY(bsp)
 ADD_SUBDIRECTORY(mdl)
+
+IF(OSG_CPP_EXCEPTIONS_AVAILABLE)
+    ADD_SUBDIRECTORY(ply)
+    ADD_SUBDIRECTORY(txp)
+ENDIF()
 
 IF(XINE_FOUND)
     ADD_SUBDIRECTORY(xine)
