From Mathias Froechlich, "Attached the collected fixes I needed to compile with all of them. Most notable the __hpux define stuff. The __hpux__ variant seems to be not defined which resulted in a compile error at this time. Consequently I have replaced all occurances of __hpux__ with __hpux. And huge surprise: now osg plugins are found and loaded correctly ... The next notable one is the MSVC_IDE fix which makes the nmake Makefiles cmake generator target behave like the ide one. Showed up because I started to do scripted builds with nmake instead of devenv... The rest is the usual bunch of stuff that just happens during normal coding ..."

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -530,9 +530,9 @@ ENDIF(MSVC AND NOT MSVC_IDE)
 #SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/lib/${CMAKE_SYSTEM_NAME})
 SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/lib)
 MAKE_DIRECTORY(${OUTPUT_LIBDIR})
-IF(NOT MSVC)
+IF(NOT MSVC OR MSVC_IDE)
     MAKE_DIRECTORY(${OUTPUT_LIBDIR}/${OSG_PLUGINS})
-ENDIF(NOT MSVC)
+ENDIF(NOT MSVC OR MSVC_IDE)
 
 # On CMake 2.4.x use EXECUTABLE_OUTPUT_PATH and LIBRARY_OUTPUT_PATH and later
 # we work around the DLL placement by use of the PREFIX target property hack
