From Pau Garcia i Quiles, "On Linux/Unix, when you change the system time (for instance, using settimeofday), OSG animations will freeze your application because osg::Timer uses gettimeofday internally on non-Win32 platforms. This is wrong and should be replace with times(2) or clock_gettime(2).
The attached patch fixes the issue in a binary-compatible way by using
clock_gettime when it's available, and falling back to gettimeofday
when it's not."

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,9 @@ IF(UNIX)
     FIND_PACKAGE(X11)
     # Some Unicies need explicit linkage to the Math library or the build fails.
     FIND_LIBRARY(MATH_LIBRARY m)
+    IF( CMAKE_SYSTEM MATCHES "Linux" )
+        FIND_LIBRARY( RT_LIBRARY rt )
+    ENDIF( CMAKE_SYSTEM MATCHES "Linux" )
 ENDIF()
 
 # Make the headers visible to everything
