From Michael Platings, "This plugin adds support for the Autodesk FBX file format. It imports animations, including skeletal and morph animations, hence all my previous submissions to osgAnimation. The plugin won't build without the changes made in the "osgAnimation small additions" submission (14th August). The plugin requires the FBX SDK to be installed, available from http://usa.autodesk.com/adsk/servlet/index?siteID=123112&id=6837478"

--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -157,6 +157,10 @@ IF(COLLADA_FOUND)
     ADD_SUBDIRECTORY(dae)
 ENDIF()
 
+IF(FBX_FOUND)
+    ADD_SUBDIRECTORY(fbx)
+ENDIF()
+
 IF(OSG_GLU_AVAILABLE)
     ADD_SUBDIRECTORY(lwo)
     ADD_SUBDIRECTORY(dw)
