From Farshid Lashkari, "I had to make a few small changes to some cmake files to enable the OSG_MSVC_GENERATE_PLUGINS_AND_WRAPPERS_MANIFESTS option for Visual Studio 2008."

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ IF(BUILD_OSG_WRAPPERS)
     ADD_SUBDIRECTORY(osgWrappers)
 ENDIF()
 
-IF(MSVC80)
+IF(MSVC80 OR MSVC90)
   OPTION(OSG_MSVC_GENERATE_PLUGINS_AND_WRAPPERS_MANIFESTS "Generate or not manifests files under VS8 for dynamically loaded dlls" ON)
 ENDIF()
 
