From Wang Rui, new native binary/ascii format infrastructure and wrappers.
From Robert Osfield, refactor of Wang Rui's original osg2 into 3 parts - parts placed into osgDB, the ReaderWriter placed into src/osg/Plugin/osg and wrappers into src/osgWrappers/serializers/osg

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ FOREACH( mylibfolder
         osgTerrain
         osgWidget
         osgVolume
+        osgWrappers/serializers
         osgWrappers/deprecated-dotosg
         osgPlugins
     )
