build and runs on Qt5

--- a/examples/osgQtBrowser/CMakeLists.txt
+++ b/examples/osgQtBrowser/CMakeLists.txt
@@ -12,7 +12,7 @@ if ( QT4_FOUND )
     INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTOPENGL_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR} ${QT_QTWEBKIT_INCLUDE_DIR} )
 endif( QT4_FOUND )
 
-SET(TARGET_ADDED_LIBRARIES osgWidget osgQt)
+SET(TARGET_LIBRARIES  ${OPENSCENEGRAPH_LIBRARIES})
 
 #### end var setup  ###
 SET ( EXAMPLE_NAME osgQtBrowser )
