--- a/examples/osgviewerQt/CMakeLists.txt
+++ b/examples/osgviewerQt/CMakeLists.txt
@@ -15,7 +15,7 @@ IF ( NOT Qt5Widgets_FOUND )
              ${QT_QTOPENGL_INCLUDE_DIR} )
 ENDIF()
 
-SET(TARGET_ADDED_LIBRARIES osgWidget osgQt)
+SET(TARGET_LIBRARIES  ${OPENSCENEGRAPH_LIBRARIES})
 
 SET( EXAMPLE_NAME osgviewerQt )
 
