--- a/examples/osgqfont/CMakeLists.txt
+++ b/examples/osgqfont/CMakeLists.txt
@@ -3,7 +3,7 @@
 ADD_DEFINITIONS(-DUSE_QT4)
 
 SET(TARGET_SRC osgqfont.cpp )
-SET(TARGET_ADDED_LIBRARIES osgQt osgText)
+SET(TARGET_LIBRARIES  ${OPENSCENEGRAPH_LIBRARIES})
 IF ( NOT Qt5Widgets_FOUND )
     INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR} ${QT_QTOPENGL_INCLUDE_DIR} )
     SET(TARGET_EXTERNAL_LIBRARIES ${QT_QTCORE_LIBRARY_RELEASE} ${QT_QTGUI_LIBRARY_RELEASE} ${QT_QTOPENGL_LIBRARY_RELEASE} )
