--- a/src/osgQt/CMakeLists.txt
+++ b/src/osgQt/CMakeLists.txt
@@ -64,16 +64,16 @@ ENDIF()
 #    QT_QTGUI_LIBRARY
 #    QT_QTOPENGL_LIBRARY
 #)
+SET(TARGET_LIBRARIES  ${OPENSCENEGRAPH_LIBRARIES})
 
 IF( QT4_FOUND )
     INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR}  ${QT_QTOPENGL_INCLUDE_DIR} )
     SET(TARGET_LIBRARIES
-    ${TARGET_LIBRARIES}
-    ${QT_QTCORE_LIBRARY} 
-    ${QT_QTGUI_LIBRARY}
-    ${QT_QTOPENGL_LIBRARY}
-)
-
+        ${TARGET_LIBRARIES}
+        ${QT_QTCORE_LIBRARY} 
+        ${QT_QTGUI_LIBRARY}
+        ${QT_QTOPENGL_LIBRARY}
+    )
 ENDIF( QT4_FOUND )
 
 SETUP_LIBRARY(${LIB_NAME})
