Moving plugins into osgQt, following Robert’s advice:
One of the items that could complicate things is the qfont plugin as this would normally be placed in the lib/osgPlugins-version directory.  This coupling to a specific OSG version is not helpful for the osgQt build or maintainers.

I think the solution is to simply place the src/osgPlugins/qfont/ReaderQFont.cpp file directly into the osgQt directory and remove the separate plugin completely.  One wouldn't use the qfont ReaderWriter without using qt/osgQt so there is nothing to loose from making this change, what you gain is simplicity and flexibility.

--- a/src/osgQt/CMakeLists.txt
+++ b/src/osgQt/CMakeLists.txt
@@ -45,7 +45,12 @@ SET(TARGET_SRC
     ${OPENSCENEGRAPH_VERSIONINFO_RC}
 )
 
+IF( QT4_FOUND)
+    SET(TARGET_SRC ${TARGET_SRC} ReaderQFont.cpp)
+ENDIF()
+
 SET(TARGET_LIBRARIES
+    osgText
     osgWidget
     osgDB
     osgUtil
