Support side-by-side installation of Qt4 and Qt5 builds

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,9 +4,11 @@
 SET(TARGET_DEFAULT_PREFIX "example_")
 SET(TARGET_DEFAULT_LABEL_PREFIX "Examples")
 
-SET(TARGET_COMMON_LIBRARIES
-    osgQt
-)
+IF ( Qt5Widgets_FOUND )
+    SET(TARGET_COMMON_LIBRARIES osgQt5)
+ELSE()
+    SET(TARGET_COMMON_LIBRARIES osgQt)
+ENDIF()
 
 IF(DYNAMIC_OPENSCENEGRAPH)
    
