--- a/examples/osgviewerQt/CMakeLists.txt
+++ b/examples/osgviewerQt/CMakeLists.txt
@@ -6,7 +6,6 @@ IF ( NOT Qt5Widgets_FOUND )
     IF( QT4_FOUND )
     SET(TARGET_EXTERNAL_LIBRARIES ${QT_QTCORE_LIBRARY_RELEASE} ${QT_QTGUI_LIBRARY_RELEASE}
         ${QT_QTOPENGL_LIBRARY_RELEASE} )
-    ADD_DEFINITIONS(-DUSE_QT4)
     ELSE( QT4_FOUND )
     SET(TARGET_EXTERNAL_LIBRARIES ${QT_LIBRARIES} )
     ENDIF( QT4_FOUND )
@@ -17,7 +16,11 @@ ENDIF()
 
 SET(TARGET_LIBRARIES  ${OPENSCENEGRAPH_LIBRARIES})
 
-SET( EXAMPLE_NAME osgviewerQt )
+IF ( Qt5Widgets_FOUND )
+    SET ( EXAMPLE_NAME osgviewerQt5 )
+ELSE()
+    SET ( EXAMPLE_NAME osgviewerQt )
+ENDIF()
 
 SETUP_EXAMPLE( ${EXAMPLE_NAME} )
 
