--- a/packaging/pkgconfig/openscenegraph-osgQt.pc.in
+++ b/packaging/pkgconfig/openscenegraph-osgQt.pc.in
@@ -5,10 +5,10 @@ exec_prefix=${prefix}
 libdir=${exec_prefix}/lib@LIB_POSTFIX@
 includedir=${prefix}/include
 
-Name: openscenegraph-osgQt
-Description: osgQt utility library.
+Name: openscenegraph-@PKGCONFIG_MODULE_NAME@
+Description: @PKGCONFIG_MODULE_NAME@ utility library.
 Version: @OPENSCENEGRAPH_VERSION@
 Requires: openscenegraph-osgWidget openscenegraph-osgDB openscenegraph-osgUtil openscenegraph-osg openthreads
 Conflicts:
-Libs: -L${libdir} -losgQt@CMAKE_BUILD_POSTFIX@
+Libs: -L${libdir} -l@PKGCONFIG_MODULE_NAME@@CMAKE_BUILD_POSTFIX@
 Cflags: -I${includedir}
