Use include/osgQt also for osgQt5

--- a/src/osgQt/CMakeLists.txt
+++ b/src/osgQt/CMakeLists.txt
@@ -7,6 +7,7 @@ ENDIF()
 
 IF ( Qt5Widgets_FOUND )
     SET(LIB_NAME osgQt5)
+    SET(HEADER_INSTALL_DIR osgQt)
 ELSE()
     SET(LIB_NAME osgQt)
 ENDIF()
