Modify FIND_PACKAGE Qt5 components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -458,14 +458,14 @@ INCLUDE(OsgMacroUtils)
 
 IF  (DESIRED_QT_VERSION)
     IF  (DESIRED_QT_VERSION MATCHES 5)
-        FIND_PACKAGE(Qt5Widgets REQUIRED)
+        FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED)
     ELSEIF (DESIRED_QT_VERSION MATCHES 4)
         FIND_PACKAGE(Qt4 REQUIRED)
     ENDIF()
 
 ELSE()
 
-    FIND_PACKAGE(Qt5Widgets QUIET)
+    FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED)
 
     IF ( Qt5Widgets_FOUND )
         # CMake 2.8.8 or greater required
