Fix build with Qt 5.11_beta3 (dropping qt5_use_modules)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -487,6 +487,7 @@ ENDIF()
 
 #If we have found Qt5, let's try to top off by getting the webkit as well
 IF ( Qt5Widgets_FOUND )
+    FIND_PACKAGE(Qt5OpenGL REQUIRED)
     FIND_PACKAGE(Qt5WebKitWidgets QUIET)
 
     IF(COMMAND cmake_policy)
