--- a/examples/osgviewerQt/CMakeLists.txt
+++ b/examples/osgviewerQt/CMakeLists.txt
@@ -2,29 +2,23 @@ SET( TARGET_SRC
     osgviewerQt.cpp
 )
 
-IF ( NOT Qt5Widgets_FOUND )
-    IF( QT4_FOUND )
-    SET(TARGET_EXTERNAL_LIBRARIES ${QT_QTCORE_LIBRARY_RELEASE} ${QT_QTGUI_LIBRARY_RELEASE}
-        ${QT_QTOPENGL_LIBRARY_RELEASE} )
-    ELSE( QT4_FOUND )
-    SET(TARGET_EXTERNAL_LIBRARIES ${QT_LIBRARIES} )
-    ENDIF( QT4_FOUND )
+SET(TARGET_LIBRARIES_VARS
+    OSG_LIBRARY
+    OSGUTIL_LIBRARY
+    OSGVIEWER_LIBRARY
+    OSGGA_LIBRARY
+    OSGDB_LIBRARY
+    OPENTHREADS_LIBRARY
+)
 
-    INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR}
-             ${QT_QTOPENGL_INCLUDE_DIR} )
-ENDIF()
 
-SET(TARGET_LIBRARIES  ${OPENSCENEGRAPH_LIBRARIES})
-
-IF ( Qt5Widgets_FOUND )
-    SET ( EXAMPLE_NAME osgviewerQt5 )
-ELSE()
-    SET ( EXAMPLE_NAME osgviewerQt )
-ENDIF()
+SET (EXAMPLE_NAME osgviewerQt )
 
 SETUP_EXAMPLE( ${EXAMPLE_NAME} )
 
-IF ( Qt5Widgets_FOUND )
-    qt5_use_modules( example_${EXAMPLE_NAME} Widgets OpenGL )
-ENDIF( Qt5Widgets_FOUND )
+SET(TARGET_LIBRARIES Qt5::Widgets Qt5::OpenGL)
+
+target_link_libraries(example_${EXAMPLE_NAME} osgQOpenGL)
+
+qt5_use_modules( example_${EXAMPLE_NAME} Widgets OpenGL )
 
